--- a/server/vercel.json
+++ b/server/vercel.json
@@ -2,9 +2,9 @@
   "version": 2,
   "builds": [
     {
-      "src": "index.ts",
+      "src": "server/app.ts",
       "use": "@vercel/node"
     }
   ],
-  "routes": [{ "src": "/(.*)", "dest": "dist/app.js" }]
+  "routes": [{ "src": "/(.*)", "dest": "/server/app.ts" }]
 }
