--- a/server/vercel.json
+++ b/server/vercel.json
@@ -7,7 +7,7 @@
     }
   ],
   "routes": [
-    { "src": "/auth/(.*)", "dest": "dist/app.js" },
-    { "src": "/(.*)", "dest": "dist/app.js" }
+    { "src": "/auth/(.*)", "dest": "dist/app.ts" },
+    { "src": "/(.*)", "dest": "dist/app.ts" }
   ]
 }
