--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,13 +1,1 @@
-{
-  "version": 2,
-  "builds": [
-    {
-      "src": "index.ts",
-      "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    { "src": "/auth/(.*)", "dest": "dist/app.ts" },
-    { "src": "/(.*)", "dest": "dist/app.ts" }
-  ]
-}
+{ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/api" }] }
