--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev ./api/index.ts",
-    "start": "node dist/app.js"
+    "dev": "ts-node-dev ./api/index.ts"
   },
   "keywords": [],
   "author": "",
